Removed unnecessary (Model/Collection.parse)s

--- a/SingularityUI/app/styles/detailHeader.styl
+++ b/SingularityUI/app/styles/detailHeader.styl
@@ -8,6 +8,10 @@
         overflow hidden
         text-overflow ellipsis
 
+    // Request name in Task detail page
+    h5
+        line-height 1.5em
+
     .button-container
         text-align right
 
