--- a/SingularityUI/app/templates/requestsTable/requestsCooldownBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsCooldownBody.hbs
@@ -3,21 +3,21 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th data-sort-attribute="name">
+                    <th data-sort-attribute="request.id">
                         Name
                     </th>
-                    <th data-sort-attribute="timestamp" class="hidden-xs">
+                    <th data-sort-attribute="requestDeployState.activeDeploy.timestamp" class="hidden-xs">
                         Requested
                     </th>
-                    <th data-sort-attribute="deployUser" class="visible-md">
+                    <th data-sort-attribute="requestDeployState.activeDeploy.user" class="hidden-sm hidden-xs">
                         Deploy user
                     </th>
-                    <th data-sort-attribute="instances" class="visible-md">
+                    <th data-sort-attribute="request.instances" class="hidden-sm hidden-xs">
                         Instances
                     </th>
 
                     {{#ifInSubFilter 'scheduled' requestsSubFilter}}
-                        <th data-sort-attribute="schedule" class="visible-lg visible-xl">
+                        <th data-sort-attribute="request.schedule" class="visible-lg visible-xl">
                             Schedule
                         </th>
                     {{/ifInSubFilter}}
@@ -31,38 +31,38 @@
     {{/if}}
 {{/unless}}
                 {{#each requests}}
-                    <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
+                    <tr data-request-id="{{ request.id }}">
                         <td>
-                            <a href="{{appRoot}}/request/{{ id }}" title={{ id }}>
-                                {{ name }}
+                            <a href="{{appRoot}}/request/{{ request.id }}" title={{ request.id }}>
+                                {{ request.id }}
                             </a>
                         </span></td>
-                        <td class="hidden-xs">
-                            <span title="{{ timestampHuman }}">{{ timestampHumanShort }}</span>
+                        <td data-value="{{ requestDeployState.activeDeploy.timestamp }}" class="hidden-xs">
+                            {{timestampFromNow requestDeployState.activeDeploy.timestamp}}
                         </td>
-                        <td class="visible-md">
-                            {{ deployUser }}
+                        <td class="hidden-sm hidden-xs">
+                            {{usernameFromEmail requestDeployState.activeDeploy.user}}
                         </td>
-                        <td class="visible-md centered">
-                            {{ instances }}
+                        <td class="hidden-sm hidden-xs">
+                            {{ request.instances }}
                         </td>
 
                         {{#ifInSubFilter 'scheduled' ../requestsSubFilter}}
                             <td class="visible-lg visible-xl">
-                                {{ schedule }}
+                                {{ request.schedule }}
                             </td>
                         {{/ifInSubFilter}}
 
                         <td class="actions-column hidden-xs">
                             {{#if canBeRunNow}}
-                                <a data-request-id="{{ id }}" data-request-type="{{#if scheduled}}scheduled{{else}}on-demand{{/if}}" data-action="run-now">
+                                <a data-request-id="{{ request.id }}" data-request-type="{{#if scheduled}}scheduled{{else}}on-demand{{/if}}" data-action="run-now">
                                     <span class="glyphicon glyphicon-repeat" title="Run now"></span>
                                 </a>
                             {{/if}}
-                            <a data-request-id="{{ id }}" data-action="viewJSON">
+                            <a data-request-id="{{ request.id }}" data-action="viewJSON">
                                 <span class="glyphicon glyphicon-th-list" title="JSON"></span>
                             </a>
-                            <a data-request-id="{{ id }}" data-action="remove">
+                            <a data-request-id="{{ request.id }}" data-action="remove">
                                 <span class="glyphicon glyphicon-trash" title="Remove"></span>
                             </a>
                         </td>
