--- a/SingularityUI/app/templates/slaves/dead.hbs
+++ b/SingularityUI/app/templates/slaves/dead.hbs
@@ -19,8 +19,12 @@
                     <td>{{ id }}</td>
                     <td>{{ rackId }}</td>
                     <td>{{ host }}</td>
-                    <td class="hidden-xs" data-value="{{ deadAt }}">{{ deadAtHuman }}</td>
-                    <td class="hidden-xs" data-value="{{ uptime }}">{{ uptimeHuman }}</td>
+                    <td class="hidden-xs" data-value="{{ deadAt }}">
+                        {{timestampFormatted deadAt}}
+                    </td>
+                    <td class="hidden-xs" data-value="{{ uptime }}">
+                        {{timestampDuration uptime}}
+                    </td>
                     <td class="actions-column">
                         <a data-slave-id="{{ id }}" data-action="remove" data-state="{{ state }}">
                              <span class="glyphicon glyphicon-trash" title="Remove"></span>
