--- a/SingularityUI/app/templates/racks/active.hbs
+++ b/SingularityUI/app/templates/racks/active.hbs
@@ -15,7 +15,8 @@
                 <tr>
                     <td>{{ id }}</td>
                     <td data-value="{{ uptime }}">
-                        {{ uptimeHuman }}
+                        {{timestampDuration uptime}}
+                        ({{timestampFormatted startedAt}})
                     </td>
                     <td class="actions-column">
                         <a data-rack-id="{{ id }}" data-action="decomission">
