--- a/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestActiveTasks.hbs
@@ -7,26 +7,40 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th class="visible-md">Status</th>
-                <th class="visible-md">Deploy ID</th>
-                <th class="visible-md">Started</th>
+                <th class="hidden-sm hidden-xs">Status</th>
+                <th class="hidden-sm hidden-xs">Deploy ID</th>
+                <th class="hidden-sm hidden-xs">Started</th>
                 <th class="hidden-xs">Updated</th>
                 <th class="hidden-xs"></th>
             </tr>
         </thead>
         <tbody>
             {{#each data}}
-                <tr data-task-id="{{ id }}">
-                    <td><span title="{{ id }}"><a href="{{appRoot}}/task/{{ id }}">{{ name }}</a></span></td>
-                    <td class="visible-md">{{ lastTaskStateHuman }}</td>
-                    <td class="visible-md">{{ deployId }}</td>
-                    <td class="visible-md" data-value="{{ startedAt }}">{{ startedAtHuman }}</td>
-                    <td class="hidden-xs" data-value="{{ updatedAt }}">{{ updatedAtHuman }}</td>
+                <tr data-task-id="{{ taskId.id }}">
+                    <td>
+                        <span title="{{ taskId.id }}">
+                            <a href="{{appRoot}}/task/{{ taskId.id }}">
+                                {{ taskId.id }}
+                            </a>
+                        </span>
+                    </td>
+                    <td class="hidden-sm hidden-xs">
+                        {{humanizeText lastTaskState}}
+                    </td>
+                    <td class="hidden-sm hidden-xs">
+                        {{ taskId.deployId }}
+                    </td>
+                    <td class="hidden-sm hidden-xs" data-value="{{ taskId.startedAt }}">
+                        {{timestampFormatted taskId.startedAt}}
+                    </td>
+                    <td class="hidden-xs" data-value="{{ taskId.updatedAt }}">
+                        {{timestampFormatted taskId.updatedAt}}
+                    </td>
                     <td class="actions-column hidden-xs">
-                        <a href="{{appRoot}}/task/{{ id }}/files/">
+                        <a href="{{appRoot}}/task/{{ taskId.id }}/files/">
                             <span class="glyphicon glyphicon-file" title="Files"></span>
                         </a>
-                        <a data-task-id="{{ id }}" data-action="viewJSON">
+                        <a data-task-id="{{ taskId.id }}" data-action="viewJSON">
                             <span class="glyphicon glyphicon-th-list" title="JSON"></span>
                         </a>
                     </td>
