--- a/SingularityUI/app/templates/requestDetail/requestDeployHistory.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestDeployHistory.hbs
@@ -16,11 +16,20 @@
                 </thead>
                 <tbody>
                     {{#each data}}
-                        <tr data-id="{{ deployId }}" data-collection="deployHistory">
-                            <td>{{ deployId }}</td>
-                            <td>{{ deployResult.deployStateHuman }}</td>
-                            <td class="hidden-xs">{{ user }}</td>
-                            <td class="hidden-xs" data-value="{{ timestamp }}">{{ timestampHuman }}</td>
+                        <tr data-id="{{ deployMarker.deployId }}" data-collection="deployHistory">
+                            <td>
+                                {{ deployMarker.deployId }}
+                            </td>
+                            <td>
+                                {{humanizeText deployResult.deployState}}
+                            </td>
+                            <td class="hidden-xs">
+                                {{usernameFromEmail deployMarker.user}}
+                            </td>
+                            <td class="hidden-xs" data-value="{{ deployMarker.timestamp }}">
+                                {{timestampFromNow deployMarker.timestamp}}
+                                ({{timestampFormatted deployMarker.timestamp}})
+                            </td>
                             <td class="hidden-xs actions-column">
                                 <a data-action="viewJSON">
                                     <span class="glyphicon glyphicon-th-list" title="JSON"></span>
