--- a/SingularityUI/app/templates/requestDetail/requestHistory.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHistory.hbs
@@ -7,18 +7,32 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th>State</th>
-                        <th>User</th>
-                        <th class="hidden-xs">Created</th>
-                        <th class="hidden-xs"></th>
+                        <th>
+                            State
+                        </th>
+                        <th>
+                            User
+                        </th>
+                        <th class="hidden-xs">
+                            Created
+                        </th>
+                        <th class="hidden-xs">
+                            {{! Actions }}
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each data}}
                         <tr data-id="{{ createdAt }}" data-collection="requestHistory">
-                            <td>{{ stateHuman }}</td>
-                            <td>{{ userHuman }}</td>
-                            <td class="hidden-xs" data-value="{{ createdAt }}">{{ createdAtHuman }}</td>
+                            <td>
+                                {{humanizeText state}}
+                            </td>
+                            <td>
+                                {{usernameFromEmail user}}
+                            </td>
+                            <td class="hidden-xs" data-value="{{ createdAt }}">
+                                {{timestampFromNow createdAt}}
+                            </td>
                             <td class="hidden-xs actions-column">
                                 <a data-local-request-history-id="{{ request.localRequestHistoryId }}" data-action="viewRequestHistoryJSON">
                                     <span class="glyphicon glyphicon-th-list" title="JSON"></span>
