--- a/SingularityUI/app/templates/requestDetail/requestScheduledTasks.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestScheduledTasks.hbs
@@ -1,32 +1,38 @@
 <div class="page-header">
     <h2>Scheduled tasks</h2>
 </div>
-{{#if scheduledTasks}}
-    <div class="row">
-        <div class="col-md-12">
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Next run</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {{#each scheduledTasks}}
-                        <tr data-task-id="{{ id }}">
-                            <td><span title="{{ id }}">{{ name }}</span></td>
-                            <td data-value="{{ nextRunAt }}"><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
-                            <td class="actions-column">
-                                <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
-                                <a data-task-id="{{ id }}" data-action="run-now">Run now</a>
-                            </td>
-                        </tr>
-                    {{/each}}
-                </tbody>
-            </table>
-        </div>
-    </div>
+{{#if data}}
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>
+                    Name
+                </th>
+                <th>
+                    Next run
+                </th>
+                <th class="hidden-xs">
+                    {{! Actions }}
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            {{#each data}}
+                <tr data-task-id="{{ taskId.id }}">
+                    <td>
+                        <span title="{{ taskId.id }}">{{ taskId.id }}</span>
+                    </td>
+                    <td data-value="{{ nextRunAt }}">
+                        {{timestampFromNow nextRunAt}}
+                    </td>
+                    <td class="hidden-xs actions-column">
+                        <a data-task-id="{{ id }}" data-action="viewJSON">JSON</a>
+                        <a data-task-id="{{ id }}" data-action="run-now">Run now</a>
+                    </td>
+                </tr>
+            {{/each}}
+        </tbody>
+    </table>
 {{else}}
-    <div class="empty-table-message"><p>No scheduled tasks</p></div>
+    <div class="empty-table-message">No scheduled tasks</div>
 {{/if}}
