--- a/SingularityUI/app/templates/requestsTable/requestsPausedBody.hbs
+++ b/SingularityUI/app/templates/requestsTable/requestsPausedBody.hbs
@@ -3,21 +3,18 @@
         <table class="table table-striped">
             <thead>
                 <tr>
-                    <th data-sort-attribute="name">
+                    <th data-sort-attribute="request.id">
                         Name
                     </th>
-                    <th data-sort-attribute="timestamp" class="hidden-xs">
+                    <th data-sort-attribute="requestDeployState.activeDeploy.timestamp" class="hidden-xs">
                         Requested
                     </th>
-                    <th data-sort-attribute="deployUser" class="visible-md">
+                    <th data-sort-attribute="requestDeployState.activeDeploy.user" class="hidden-sm hidden-xs">
                         Deploy user
-                    </th>
-                    <th data-sort-attribute="instances" class="visible-md">
-                        Instances
                     </th>
 
                     {{#ifInSubFilter 'scheduled' requestsSubFilter}}
-                        <th data-sort-attribute="schedule" class="visible-lg visible-xl">
+                        <th data-sort-attribute="request.schedule" class="visible-lg visible-xl">
                             Schedule
                         </th>
                     {{/ifInSubFilter}}
@@ -31,36 +28,33 @@
     {{/if}}
 {{/unless}}
                 {{#each requests}}
-                    <tr data-request-id="{{ id }}" data-request-deploy-user="{{ deployUser }}">
+                    <tr data-request-id="{{ request.id }}">
                         <td>
-                            <a href="{{appRoot}}/request/{{ id }}" title={{ id }}>
-                                {{ name }}
+                            <a href="{{appRoot}}/request/{{ request.id }}" title={{ request.id }}>
+                                {{ request.id }}
                             </a>
                         </span></td>
                         <td class="hidden-xs">
-                            <span title="{{ timestampHuman }}">{{ timestampHumanShort }}</span>
+                            {{timestampFromNow requestDeployState.activeDeploy.timestamp}}
                         </td>
-                        <td class="visible-md">
-                            {{ deployUser }}
-                        </td>
-                        <td class="visible-md centered">
-                            {{ instances }}
+                        <td class="hidden-sm hidden-xs">
+                            {{usernameFromEmail requestDeployState.activeDeploy.user}}
                         </td>
 
                         {{#ifInSubFilter 'scheduled' ../requestsSubFilter}}
                             <td class="visible-lg visible-xl">
-                                {{ schedule }}
+                                {{ request.schedule }}
                             </td>
                         {{/ifInSubFilter}}
 
                         <td class="actions-column hidden-xs">
-                            <a data-request-id="{{ id }}" data-action="unpause">
+                            <a data-request-id="{{ request.id }}" data-action="unpause">
                                 <span class="glyphicon glyphicon-play" title="Unpause"></span>
                             </a>
-                            <a data-request-id="{{ id }}" data-action="viewJSON">
+                            <a data-request-id="{{ request.id }}" data-action="viewJSON">
                                 <span class="glyphicon glyphicon-th-list" title="JSON"></span>
                             </a>
-                            <a data-request-id="{{ id }}" data-action="remove">
+                            <a data-request-id="{{ request.id }}" data-action="remove">
                                 <span class="glyphicon glyphicon-trash" title="Remove"></span>
                             </a>
                         </td>
@@ -72,7 +66,7 @@
         </table>
     {{else}}
         {{#if collectionSynced}}
-            <div class="empty-table-message"><p>No requests on cooldown</p></div>
+            <div class="empty-table-message"><p>No paused requests</p></div>
         {{else}}
             <div class="page-loader centered"></div>
         {{/if}}
