--- a/SingularityUI/app/templates/slaves/decomissioning.hbs
+++ b/SingularityUI/app/templates/slaves/decomissioning.hbs
@@ -23,8 +23,12 @@
                     <td>{{ host }}</td>
                     <td>{{ state }}</td>
                     <td>{{ decomissioningBy }}</td>
-                    <td data-value="{{ decomissioningAt }}">{{ decomissioningAtHuman }}</td>
-                    <td data-value="{{ uptime }}">{{ uptimeHuman }}</td>
+                    <td data-value="{{ decomissioningAt }}">
+                        {{timestampFormatted decomissioningAt}}
+                    </td>
+                    <td data-value="{{ uptime }}">
+                        {{timestampDuration uptime}}
+                    </td>
                     <td class="actions-column">
                         <a data-slave-id="{{ id }}" data-action="remove" data-state="{{ state }}">
                              <span class="glyphicon glyphicon-trash" title="Remove"></span>
